--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -45,6 +45,44 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 * <tt>NET0450</tt>
 * <tt>NET0460</tt>
 * <tt>NET0470</tt>
+  * <tt>Table1,1</tt>: UAS ID, any option
+    * <tt>Table1,1.1</tt>: UAS ID, option 1 - serial number
+    * <tt>Table1,1.2</tt>: UAS ID, option 2 - registration id
+    * <tt>Table1,1.3</tt>: UAS ID, option 3 - utm (uuid)
+    * <tt>Table1,1.4</tt>: UAS ID, option 4 - specific session id
+  * <tt>Table1,2</tt>: UA Type
+  * <tt>Table1,3</tt>: UA Classification
+  * <tt>Table1,4</tt>: UA Classification Type
+  * <tt>Table1,5</tt>: Timestamp
+  * <tt>Table1,6</tt>: Timestamp Accuracy
+  * <tt>Table1,7</tt>: Operational Status
+  * <tt>Table1,8</tt>: Operation Description
+  * <tt>Table1,9</tt>: Operator ID
+  * <tt>Table1,10</tt>: Latitude
+  * <tt>Table1,11</tt>: Longitude
+  * <tt>Table1,12</tt>: Geodetic Altitude
+  * <tt>Table1,13</tt>: Pressure Altitude
+  * <tt>Table1,14</tt>: Height
+  * <tt>Table1,15</tt>: Height type
+  * <tt>Table1,16</tt>: Geodetic Vertical Accuracy
+  * <tt>Table1,17</tt>: Horizontal Accuracy
+  * <tt>Table1,18</tt>: Speed Accuracy
+  * <tt>Table1,19</tt>: Track Direction
+  * <tt>Table1,20</tt>: Speed
+  * <tt>Table1,21</tt>: Vertical Speed
+  * <tt>Table1,22</tt>: Auth Data
+  * <tt>Table1,23</tt>: Operator Latitude
+  * <tt>Table1,24</tt>: Operator Longitude
+  * <tt>Table1,25</tt>: Operator Altitude
+  * <tt>Table1,26</tt>: Operator Location Type
+  * <tt>Table1,27</tt>: Operating Area Radius
+  * <tt>Table1,28</tt>: Operating Area Polygon
+  * <tt>Table1,29</tt>: Operating Area Type
+  * <tt>Table1,30</tt>: Operating Area Count
+  * <tt>Table1,31</tt>: Operating Area Floor
+  * <tt>Table1,32</tt>: Operating Area Ceiling
+  * <tt>Table1,33</tt>: Operating Area Start
+  * <tt>Table1,34</tt>: Operating Area End
 * <tt>NET0480</tt>
 * <tt>NET0490</tt>
 
@@ -64,7 +102,7 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 * <tt>NET0720</tt>
 * <tt>NET0730</tt>
 * <tt>NET0740</tt>
-  
+
 ## DSS Compliance Matrix
 
 ### DSS Implementation Requirements
