--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -27,6 +27,44 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 * <tt>NET0240</tt>
 * <tt>NET0250</tt>
 * <tt>NET0260</tt>
+  * <tt>NET0260,Table1,1</tt>: UAS ID, any option
+    * <tt>NET0260,Table1,1.1</tt>: UAS ID, option 1 - serial number
+    * <tt>NET0260,Table1,1.2</tt>: UAS ID, option 2 - registration id
+    * <tt>NET0260,Table1,1.3</tt>: UAS ID, option 3 - utm (uuid)
+    * <tt>NET0260,Table1,1.4</tt>: UAS ID, option 4 - specific session id
+  * <tt>NET0260,Table1,2</tt>: UA Type
+  * <tt>NET0260,Table1,3</tt>: UA Classification
+  * <tt>NET0260,Table1,4</tt>: UA Classification Type
+  * <tt>NET0260,Table1,5</tt>: Timestamp
+  * <tt>NET0260,Table1,6</tt>: Timestamp Accuracy
+  * <tt>NET0260,Table1,7</tt>: Operational Status
+  * <tt>NET0260,Table1,8</tt>: Operation Description
+  * <tt>NET0260,Table1,9</tt>: Operator ID
+  * <tt>NET0260,Table1,10</tt>: Latitude
+  * <tt>NET0260,Table1,11</tt>: Longitude
+  * <tt>NET0260,Table1,12</tt>: Geodetic Altitude
+  * <tt>NET0260,Table1,13</tt>: Pressure Altitude
+  * <tt>NET0260,Table1,14</tt>: Height
+  * <tt>NET0260,Table1,15</tt>: Height type
+  * <tt>NET0260,Table1,16</tt>: Geodetic Vertical Accuracy
+  * <tt>NET0260,Table1,17</tt>: Horizontal Accuracy
+  * <tt>NET0260,Table1,18</tt>: Speed Accuracy
+  * <tt>NET0260,Table1,19</tt>: Track Direction
+  * <tt>NET0260,Table1,20</tt>: Speed
+  * <tt>NET0260,Table1,21</tt>: Vertical Speed
+  * <tt>NET0260,Table1,22</tt>: Auth Data
+  * <tt>NET0260,Table1,23</tt>: Operator Latitude
+  * <tt>NET0260,Table1,24</tt>: Operator Longitude
+  * <tt>NET0260,Table1,25</tt>: Operator Altitude
+  * <tt>NET0260,Table1,26</tt>: Operator Location Type
+  * <tt>NET0260,Table1,27</tt>: Operating Area Radius
+  * <tt>NET0260,Table1,28</tt>: Operating Area Polygon
+  * <tt>NET0260,Table1,29</tt>: Operating Area Type
+  * <tt>NET0260,Table1,30</tt>: Operating Area Count
+  * <tt>NET0260,Table1,31</tt>: Operating Area Floor
+  * <tt>NET0260,Table1,32</tt>: Operating Area Ceiling
+  * <tt>NET0260,Table1,33</tt>: Operating Area Start
+  * <tt>NET0260,Table1,34</tt>: Operating Area End
 * <tt>NET0270</tt>
 * <tt>NET0280</tt>
 * <tt>NET0290</tt>
