--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -84,10 +84,10 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 * <tt>NET0460</tt>
 * <tt>NET0470</tt>
   * <tt>NET0470,Table1,1</tt>: UAS ID, any option
-    * <tt>NET0470,Table1,1.1</tt>: UAS ID, option 1 - serial number
-    * <tt>NET0470,Table1,1.2</tt>: UAS ID, option 2 - registration id
-    * <tt>NET0470,Table1,1.3</tt>: UAS ID, option 3 - utm (uuid)
-    * <tt>NET0470,Table1,1.4</tt>: UAS ID, option 4 - specific session id
+    * <tt>NET0470,Table1,1.1</tt>: UAS ID, option 1 - Serial Number
+    * <tt>NET0470,Table1,1.2</tt>: UAS ID, option 2 - Registration ID
+    * <tt>NET0470,Table1,1.3</tt>: UAS ID, option 3 - UTM (UUID)
+    * <tt>NET0470,Table1,1.4</tt>: UAS ID, option 4 - Specific Session ID
   * <tt>NET0470,Table1,2</tt>: UA Type
   * <tt>NET0470,Table1,3</tt>: UA Classification
   * <tt>NET0470,Table1,4</tt>: UA Classification Type
