[uss_qualifier/scenarios/dss_interop] Add checks for DSS0130 ISA and subscription synchronization

--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -157,7 +157,16 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 
 * <tt>DSS0110</tt>
 * <tt>DSS0120</tt>
-* <tt>DSS0130</tt>
+* <tt>DSS0130</tt>: Data Synchronization
+  * <tt>DSS0130,2,a</tt>: Subscription ID Synchronization
+  * <tt>DSS0130,2,b</tt>: Subscription Owner Synchronization
+  * <tt>DSS0130,2,c</tt>: Subscription URL Synchronization
+  * <tt>DSS0130,2,d</tt>: Subscription Start/End Times Synchronization
+  * <tt>DSS0130,2,f</tt>: Subscription Notification Count Synchronization
+  * <tt>DSS0130,3,a</tt>: ISA ID Synchronization
+  * <tt>DSS0130,3,b</tt>: ISA Owner Synchronization
+  * <tt>DSS0130,3,c</tt>: ISA URL Synchronization
+  * <tt>DSS0130,3,d</tt>: ISA Start/End Times Synchronization
 
 Elaboration on testing methods for DSS0130 in section A2.6.1 implies the following requirements:
 
