Requirement mapping for NET0340

--- a/monitoring/uss_qualifier/requirements/astm/f3411/v19.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v19.md
@@ -60,6 +60,7 @@ For information on these requirements, refer to [the ASTM standard F3411-19](htt
 
 ### USS-USS Interfaces
 
+* <tt>NET0340</tt>
 * <tt>NET0710</tt>
 * <tt>NET0720</tt>
 * <tt>NET0730</tt>
