--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -136,6 +136,7 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 
 ### USS-USS Interfaces
 
+* <tt>NET0340</tt>
 * <tt>NET0710</tt>
 * <tt>NET0720</tt>
 * <tt>NET0730</tt>
