--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19_suite1.md
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19_suite1.md
@@ -12,19 +12,23 @@ Defined in [parent suite](f3411_19.md) [`suites.astm.netrid.f3411_19`](./f3411_1
   <tr>
     <th>Package</th>
     <th>Requirement</th>
+    <th>Status</th>
     <th>Checked in</th>
   </tr>
   <tr>
     <td rowspan="3" style="vertical-align:top;"><a href="../../../requirements/astm/f3411/v22a.md">astm.f3411.v22a</a></td>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0030</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0050</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0060</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
 </table>
