--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a_suite1.md
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a_suite1.md
@@ -13,23 +13,28 @@ Defined in [parent suite](f3411_22a.md) [`suites.astm.netrid.f3411_22a`](./f3411
   <tr>
     <th>Package</th>
     <th>Requirement</th>
+    <th>Status</th>
     <th>Checked in</th>
   </tr>
   <tr>
     <td rowspan="4" style="vertical-align:top;"><a href="../../../requirements/astm/f3411/v22a.md">astm.f3411.v22a</a></td>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0030</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/isa_simple.md">ASTM NetRID DSS: Simple ISA</a><br><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0050</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0060</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/subscription_validation.md">ASTM NetRID DSS: Subscription Validation</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">NET0710</a></td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss/isa_simple.md">ASTM NetRID DSS: Simple ISA</a></td>
   </tr>
 </table>
